[gd_scene load_steps=9 format=3 uid="uid://b4a5pdfkajrj2"]

[ext_resource type="Script" path="res://Script/TitleScreen/TitleScreen.gd" id="1_urjxg"]
[ext_resource type="Texture2D" uid="uid://chx6g70nwag6b" path="res://Asset/TitleScreen/Menu/label_continue.png" id="2_vt5ah"]
[ext_resource type="Texture2D" uid="uid://dj7ssfj4rutov" path="res://Asset/TitleScreen/Menu/label_load.png" id="3_77qaw"]
[ext_resource type="Texture2D" uid="uid://cl7kg2nja5pbj" path="res://Asset/TitleScreen/Menu/label_new_game.png" id="4_r2376"]
[ext_resource type="Texture2D" uid="uid://edym8kybsv3q" path="res://Asset/TitleScreen/Menu/label_option.png" id="5_w63xo"]
[ext_resource type="Texture2D" uid="uid://7lpcx5f6jhjo" path="res://Asset/TitleScreen/Menu/label_quit.png" id="6_vc0lr"]
[ext_resource type="Texture2D" uid="uid://bei2qwck1y724" path="res://Asset/TitleScreen/Menu/label_back.png" id="7_8lm8j"]
[ext_resource type="Script" path="res://Script/TitleScreen/InputOption.gd" id="8_3wwuh"]

[node name="TitleScreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40
script = ExtResource("1_urjxg")

[node name="MainScreen" type="Control" parent="."]
visible = false
layout_mode = 2

[node name="MainMenu" type="VBoxContainer" parent="MainScreen"]
layout_mode = 2
offset_left = 479.0
offset_top = 168.0
offset_right = 591.0
offset_bottom = 400.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30
alignment = 1

[node name="Continue" type="TextureButton" parent="MainScreen/MainMenu"]
layout_mode = 2
texture_normal = ExtResource("2_vt5ah")
stretch_mode = 3

[node name="Load" type="TextureButton" parent="MainScreen/MainMenu"]
layout_mode = 2
texture_normal = ExtResource("3_77qaw")
stretch_mode = 3

[node name="NewGame" type="TextureButton" parent="MainScreen/MainMenu"]
layout_mode = 2
texture_normal = ExtResource("4_r2376")
stretch_mode = 3

[node name="Option" type="TextureButton" parent="MainScreen/MainMenu"]
layout_mode = 2
texture_normal = ExtResource("5_w63xo")
stretch_mode = 3

[node name="Quit" type="TextureButton" parent="MainScreen/MainMenu"]
layout_mode = 2
texture_normal = ExtResource("6_vc0lr")
stretch_mode = 3

[node name="OptionScreen" type="Control" parent="."]
layout_mode = 2

[node name="Back" type="TextureButton" parent="OptionScreen"]
layout_mode = 0
offset_left = 501.0
offset_top = 530.0
offset_right = 553.0
offset_bottom = 570.0
scale = Vector2(1, 0.84)
texture_normal = ExtResource("7_8lm8j")

[node name="TabOption" type="TabContainer" parent="OptionScreen"]
layout_mode = 2
offset_right = 1071.0
offset_bottom = 569.0
scale = Vector2(1, 0.92)
tab_alignment = 1

[node name="Input" type="GridContainer" parent="OptionScreen/TabOption"]
layout_mode = 2
columns = 4
script = ExtResource("8_3wwuh")

[node name="Sound" type="Control" parent="OptionScreen/TabOption"]
visible = false
layout_mode = 2

[node name="Video" type="Control" parent="OptionScreen/TabOption"]
visible = false
layout_mode = 2

[connection signal="pressed" from="MainScreen/MainMenu/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="MainScreen/MainMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="OptionScreen/Back" to="." method="_on_back_pressed"]
